Wayland: Inverted (natural) option ignored on (resolved upstream) #104272

Closed
opened 2023-02-01 06:02:34 +01:00 by Rodrigo · 12 comments

System Information
Operating system: Linux-6.0.18-300.fc37.x86_64-x86_64-with-glibc2.36 64 Bits
Graphics card: AMD Radeon Vega 8 Graphics (raven, LLVM 15.0.6, DRM 3.48, 6.0.18-300.fc37.x86_64) AMD 4.6 (Core Profile) Mesa 22.3.2

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-30 22:48, hash: ea8fd343eb
Worked: (newest version of Blender that worked as expected)

Short description of error
[When I slide two fingers to the left to rotate the view in 3D Viewport it rotates in the contrary direction. This does not happen to me in Windows 10.]

Exact steps for others to reproduce the error
[When I slide my fingers on the touchpad to rotate the 3D View.]

**System Information** Operating system: Linux-6.0.18-300.fc37.x86_64-x86_64-with-glibc2.36 64 Bits Graphics card: AMD Radeon Vega 8 Graphics (raven, LLVM 15.0.6, DRM 3.48, 6.0.18-300.fc37.x86_64) AMD 4.6 (Core Profile) Mesa 22.3.2 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-30 22:48, hash: `ea8fd343eb` Worked: (newest version of Blender that worked as expected) **Short description of error** [When I slide two fingers to the left to rotate the view in 3D Viewport it rotates in the contrary direction. This does not happen to me in Windows 10.] **Exact steps for others to reproduce the error** [When I slide my fingers on the touchpad to rotate the 3D View.]
Author

Added subscriber: @RoyMarVal

Added subscriber: @RoyMarVal

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Can you check if behavior in web browser for example is consistent in Linux and Windows? Sounds to me like OS user level setting than Blender issue

Can you check if behavior in web browser for example is consistent in Linux and Windows? Sounds to me like OS user level setting than Blender issue
Author

0000-0758.mp4

This happens to me specifically with the rotation in the 3D Viewport. When I use "Shift" to pan in the 3D Viewpot it works correctly.

[0000-0758.mp4](https://archive.blender.org/developer/F14233507/0000-0758.mp4) This happens to me specifically with the rotation in the 3D Viewport. When I use "Shift" to pan in the 3D Viewpot it works correctly.

Can you specify touchpad hardware or at least notebook make and model?

Can you specify touchpad hardware or at least notebook make and model?
Author

Sure, it's a Huawei MateBook -D15, with an AMD Ryzen 5 3500U and 8 GB of RAM.

Sure, it's a Huawei MateBook -[D15](https://archive.blender.org/developer/D15), with an AMD Ryzen 5 3500U and 8 GB of RAM.

I would assume hardware is i2c-ELAN2204, but from quick research it seems that gestures are abstracted, so this should be in domain of WM to handle, perhaps even user level app.

In any case I don't have HW in question so will leave for others

I would assume hardware is i2c-ELAN2204, but from quick research it seems that gestures are abstracted, so this should be in domain of WM to handle, perhaps even user level app. In any case I don't have HW in question so will leave for others
Richard Antalik added
Status
Needs Triage
and removed
Status
Needs Information from User
labels 2023-02-13 21:55:18 +01:00
Member

I can confirm this behavior, it it reversed when I disable Natural Scrolling in Fedora Preferences.

This however does not explain the inconsistency of directions.
Reading code a bit, it seems @ideasman42 has already gone through the corresponding bits ( e.g. f0fba1a2d8 )

Since this (Trackpad navigation) is quite new for me, I am not totaly sure though, after using it for a bit, it actually doesnt fell that wrong anymore.

@ideasman42 : do you know what the convention is? do exactly the same as what would happen with the mouse (then current behavior seems wrong)

Will confirm for now though.

I can confirm this behavior, it it reversed when I disable `Natural Scrolling` in Fedora Preferences. This however does not explain the inconsistency of directions. Reading code a bit, it seems @ideasman42 has already gone through the corresponding bits ( e.g. f0fba1a2d8de ) Since this (Trackpad navigation) is quite new for me, I am not totaly sure though, after using it for a bit, it actually doesnt fell that wrong anymore. @ideasman42 : do you know what the convention is? do exactly the same as what would happen with the mouse (then current behavior seems wrong) Will confirm for now though.
Philipp Oeser added
Status
Confirmed
Module
User Interface
and removed
Status
Needs Triage
labels 2023-03-03 15:28:59 +01:00

This problem exists because the "Natural" touch-pad setting cannot be detected, so the axis-inverted argument is always false.

Checking on this again, Wayland added support detecting inverted axis recently - which will be included in v1.22 see announcement, so once this is released - we can update Wayland and support this.

Setting as a known issue as this depends on an up-stream project.

This problem exists because the "Natural" touch-pad setting cannot be detected, so the axis-inverted argument is always false. Checking on this again, Wayland added support detecting inverted axis recently - which will be included in v1.22 [see announcement](https://lists.freedesktop.org/archives/wayland-devel/2023-February/042629.html), so once this is released - we can update Wayland and support this. Setting as a known issue as this depends on an up-stream project.
Campbell Barton added the
Platform
Linux
label 2023-03-16 03:29:23 +01:00
Campbell Barton self-assigned this 2023-03-16 03:29:50 +01:00
Campbell Barton added
Type
Known Issue
and removed
Type
Report
labels 2023-03-16 03:30:16 +01:00
Campbell Barton added
Module
Platforms, Builds & Tests
and removed
Module
User Interface
labels 2023-03-16 03:31:37 +01:00
Campbell Barton changed title from When I slide my fingers on the touchpad in Fedora Linux to rotate the 3D view it rotates in the opposite direction. to [TODO] Inverted (natural) option ignored on Wayland 2023-03-16 03:32:11 +01:00
Campbell Barton changed title from [TODO] Inverted (natural) option ignored on Wayland to Inverted (natural) option ignored on Wayland (resolved upstream) 2023-03-16 03:32:34 +01:00
Campbell Barton changed title from Inverted (natural) option ignored on Wayland (resolved upstream) to Wayland: Inverted (natural) option ignored on (resolved upstream) 2023-03-16 03:33:43 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-21 01:55:05 +01:00

Re-opening as the fix will only be enabled once Linux libs uses Wayland v1.22.

Re-opening as the fix will only be enabled once Linux libs uses Wayland v1.22.
Blender Bot added
Status
Confirmed
and removed
Status
Resolved
labels 2023-03-21 01:57:21 +01:00
Campbell Barton added the
Interest
Wayland
label 2023-03-21 10:20:43 +01:00

Wayland 1.22 has been released, Linux libraries have been updated.
Note that Linux distributions will have to upgrade Wayland too - however the solution on Blender's side has been applied.

Closing.

Wayland 1.22 has been released, Linux libraries have been updated. Note that Linux distributions will have to upgrade Wayland too - however the solution on Blender's side has been applied. Closing.
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-04-05 06:09:30 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104272
No description provided.