Fix #104272: Inverted (natural) option ignored on Wayland

Detect axis inversion, depends on the upcoming Wayland v1.22 release
which will need Linux libs to be upgraded too.